fix Contrast 2

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,6 @@ span {
     background-color: #3498db;
     padding: 5px;
     border-radius: 10px;
-    color: #fff;
 }
 
 .nome {
